--- a/app/assets/stylesheets/layout/grids/metadata_bar_public_inspection_grid.scss
+++ b/app/assets/stylesheets/layout/grids/metadata_bar_public_inspection_grid.scss
@@ -4,7 +4,7 @@
   .fr-head-meta-counts {
     grid-area: fr-head-meta-counts;
     display: grid;
-    gap: 0rem;
+    gap: 1rem;
   }
 
   .special-filing-counts {
